# llm-tracker-backend

./: .env_tem  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  init.sql
src/: error.rs  main.rs
src/handlers/: auth_handler.rs  mod.rs  note_handler.rs  roadmap_handler.rs
src/model/qdrant/: README.md  config.yaml
src/models/: artifact.rs  mod.rs  note.rs  roadmap.rs  user.rs
src/repository/: artifact_repo.rs  mod.rs  note_repo.rs  roadmap_repo.rs  user_repo.rs
src/routes/: auth_routes.rs  mod.rs  note_routes.rs  roadmap_routes.rs
src/services/: auth_service.rs  mod.rs  note_service.rs  roadmap_service.rs
